syntax = "proto3";

package io.seata.grpc;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option java_package = "io.seata.core.rpc.grpc.generatedl";
option java_outer_classname = "GrpcRemoting";

message GrpcMessage {
  int64 ID = 1;
  string type = 2;
  google.protobuf.Any Message = 3;
}

service TransactionManagerService {
  rpc RegisterTM(GrpcMessage) returns (GrpcMessage);
  rpc GlobalBegin(GrpcMessage) returns (GrpcMessage);
  rpc GlobalCommit(GrpcMessage) returns (GrpcMessage);
  rpc GlobalRollback(GrpcMessage) returns (GrpcMessage);
  rpc GlobalReport(GrpcMessage) returns (GrpcMessage);
  rpc GetGlobalStatus(GrpcMessage) returns (GrpcMessage);
  rpc HeartbeatChecker(GrpcMessage) returns (GrpcMessage);
}

service ResourceManagerService {
  rpc RegisterRM(GrpcMessage) returns (GrpcMessage);
  rpc BranchRegister(GrpcMessage) returns (GrpcMessage);
  rpc BranchReport(GrpcMessage) returns (GrpcMessage);
  rpc LockQuery(GrpcMessage) returns (GrpcMessage);
  rpc HeartbeatChecker(GrpcMessage) returns (google.protobuf.Empty);
}

service BranchTransactionService {
  rpc BranchCommit(GrpcMessage) returns (GrpcMessage);
  rpc BranchRollback(GrpcMessage) returns (GrpcMessage);
  rpc RMUndoLogHandle(GrpcMessage) returns (google.protobuf.Empty);
}