syntax = "proto3";

package io.seata.protocol.protobuf;

import "protocol/transcation/abstractGlobalEndResponse.proto";

option java_multiple_files = true;
option java_outer_classname = "GlobalReportResponse";
option java_package = "io.seata.serializer.protobuf.generated";

message GlobalReportResponseProto {
    AbstractGlobalEndResponseProto abstractGlobalEndResponse = 1;
}